--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>1.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
