--- a/learn/pom.xml
+++ b/learn/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.learn</groupId>
     <artifactId>learn</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
