--- a/mini/src/main/resources/application-dev.yml
+++ b/mini/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 spring:
   profiles: dev
   datasource:
-    url: jdbc:mysql://47.102.153.227:3306/miniProduct01?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://localhost:3306/miniProduct01?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
     username: root
-    password: '!QAZ2wsx'
+    password: 3160411057
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 server:
-  port: 8081
+  port: 8080
